@@ -1,0 +1,10 @@
+Foundations: H-4 C-A D-A S-A 
+Freecells:  6S  8H  QD  4S
+: 4C 2C 9C 8C QS JD
+: 5H QH 3C
+: QC 9S 6H 9H 3S KS 3D
+: 5D 2S JC 5C JH 6D 5S
+: 2D KD TH TC TD 8D
+: 7H JS KH TS KC 7C
+: 
+: 7S 6C 7D 4D 8S 9D
